# viscap_gazebo

./: CMakeLists.txt  README.md  package.xml
bagfiles/: joystick.bag
launch/: imav_2016_indoor.launch  imav_2016_indoor_slam.launch  joystick.launch  joystick_play.launch  spawn_quadrotor.launch  start_gazebo.launch  start_simulation.launch  start_simulation.launch~  swarm.launch
models/imav2016_indoor/: model.config  model.sdf
models/imav2016_indoor/materials/scripts/: asphalt.material
rviz_config/: slam.rviz
src/: go_to_position.cpp  joystick_control.cpp  transform_publisher.cpp
urdf/: quadrotor.urdf.xacro  quadrotor_base.urdf.xacro
urdf/sensors/: hokuyo_utm30lx.urdf.xacro  quadrotor_sensors.urdf.xacro  sonar_sensor.urdf.xacro
worlds/: empty.world  imav_indoor_2016.world  imav_indoor_2017.world
worlds/xacro/: imav_indoor.world.xacro  macros.urdf.xacro
