<?xml version="1.0"?>
<package>
  <name>viscap_gazebo</name>
  <version>0.1.0</version>
  <description>This package holds files that define many simulation scenarios on Gazebo to be used by the Viscap group.</description>

  <maintainer email="faerugb@gmail.com">Rafael Gomes Braga</maintainer>

  <license>Apache 2.0</license>

  <author >Rafael Gomes Braga</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
